language/move-lang/tests/move_check/locals/use_after_move_simple.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/locals/use_after_move_simple.move:7:17
  │
6 │         move x;
  │         ------ The variable does not have a value due to this position. The variable must be assigned a value before being used
7 │         let _ = move x + 1;
  │                 ^^^^^^ Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_simple.move:11:19
   │
10 │         let _s2 = s;
   │                   - The variable does not have a value due to this position. The variable must be assigned a value before being used
11 │         let _s3 = s;
   │                   ^ Invalid usage of variable 's'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_simple.move:17:17
   │
16 │         move x;
   │         ------ The variable does not have a value due to this position. The variable must be assigned a value before being used
17 │         let _ = x + 1;
   │                 ^ Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_simple.move:21:19
   │
20 │         let _s2 = s;
   │                   - The variable does not have a value due to this position. The variable must be assigned a value before being used
21 │         let _s3 = copy s;
   │                   ^^^^^^ Invalid usage of variable 's'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_simple.move:27:17
   │
26 │         move x;
   │         ------ The variable does not have a value due to this position. The variable must be assigned a value before being used
27 │         let _ = &x;
   │                 ^^ Invalid usage of variable 'x'

error[E06002]: use of unassigned variable
   ┌─ tests/move_check/locals/use_after_move_simple.move:31:19
   │
30 │         let _s2 = s;
   │                   - The variable does not have a value due to this position. The variable must be assigned a value before being used
31 │         let _s3 = &s;
   │                   ^^ Invalid usage of variable 's'

